- Created new menu for Home page to remove the HOME button - Tweaked auto complete field in ingrient list to be only 1 line and ignore space - Uniformed the Edit text color to Primary color - More tweaks

--- a/app/src/main/res/layout/activity_saved_recipe.xml
+++ b/app/src/main/res/layout/activity_saved_recipe.xml
@@ -21,7 +21,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="Search Product"
-        android:inputType="textVisiblePassword" />
+        android:inputType="textVisiblePassword"
+        android:backgroundTint="@color/colorPrimary"/>
 
     <ListView
         android:id="@+id/savedRecipeListView"
