--- a/app/src/main/res/layout/layout_filter_dialog.xml
+++ b/app/src/main/res/layout/layout_filter_dialog.xml
@@ -76,6 +76,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:hint="@string/tv_enter_ingredient"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:backgroundTint="@color/colorPrimary"/>
 
 </LinearLayout>
