--- a/app/src/main/res/layout/activity_ingredient_list.xml
+++ b/app/src/main/res/layout/activity_ingredient_list.xml
@@ -33,7 +33,9 @@
         android:text="Clear"
         app:layout_constraintRight_toLeftOf="@+id/btn_search"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:layout_marginEnd="7dp" />
+        android:layout_marginEnd="7dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"/>
 
     <Button
         android:id="@+id/btn_search"
@@ -41,10 +43,13 @@
         android:layout_height="wrap_content"
         android:onClick="search"
         android:text="@string/btn_search"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_clear"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"/>
 
     <TextView
         android:id="@+id/btn_tap_remove"
