--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -65,9 +65,8 @@
         android:id="@+id/imageDisplay"
         android:layout_width="250dp"
         android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
-        android:src="@drawable/sample" />
+        android:layout_alignTop="@+id/random_recipe"
+        android:layout_centerHorizontal="true" />
 
     <android.support.design.widget.BottomNavigationView
         android:theme="@style/NavigationTheme"
