--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -10,13 +10,52 @@
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <ListView
-        android:id="@+id/lv_favorite_recipes"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@color/colorPrimary"
-        android:dividerHeight="1dp"
+        android:orientation="vertical"
         android:layout_below="@+id/toolbar"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true">
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_fav_recipes"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="Favorite Recipes"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:textColor="@drawable/nav_item_color"
+            android:gravity="center" />
+
+        <ListView
+            android:id="@+id/lv_favorite_recipes"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/toolbar"
+            android:layout_centerHorizontal="true"
+            android:divider="@color/colorPrimary"
+            android:dividerHeight="1dp"
+            android:layout_weight="5" />
+
+        <TextView
+            android:id="@+id/tv_fav_ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="Favorite Ingredients"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:textColor="@drawable/nav_item_color"
+            android:gravity="center" />
+
+        <ListView
+            android:id="@+id/lv_fav_ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5" />
+    </LinearLayout>
+
+</RelativeLayout>
