--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,7 +44,7 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:id="@+id/random_recipe_name"
+        android:id="@+id/tv_recipe_of_the_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold|italic"
@@ -54,20 +54,21 @@
         android:layout_alignEnd="@+id/imageView" />
 
     <TextView
-        android:id="@+id/random_recipe"
+        android:id="@+id/tv_daily_recipe_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_below="@+id/random_recipe_name"
+        android:layout_below="@+id/tv_recipe_of_the_day"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textColor="@color/colorPrimary"/>
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@+id/imageDisplay"
         android:layout_width="250dp"
         android:layout_height="180dp"
-        android:layout_below="@+id/random_recipe"
+        android:layout_below="@+id/tv_daily_recipe_name"
         android:layout_alignStart="@+id/spinner" />
 
     <android.support.design.widget.BottomNavigationView
