--- a/app/src/main/res/layout/activity_my_recipes.xml
+++ b/app/src/main/res/layout/activity_my_recipes.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bizdev.recipeapp.cookitup.SavedIngredients"
+    tools:context="com.bizdev.recipeapp.cookitup.MyIngredients"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -12,10 +12,10 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <ListView
-        android:id="@+id/savedIngredientListView"
+        android:id="@+id/savedRecipeListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
