--- a/app/src/main/res/layout/activity_my_ingredients.xml
+++ b/app/src/main/res/layout/activity_my_ingredients.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bizdev.recipeapp.cookitup.MyIngredients"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.bizdev.recipeapp.cookitup.MyIngredients">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
