--- a/app/src/main/res/drawable/progress.xml
+++ b/app/src/main/res/drawable/progress.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:pivotX="50%" android:pivotY="50%" android:fromDegrees="0"
+    android:fromDegrees="0"
+    android:pivotX="50%"
+    android:pivotY="50%"
     android:toDegrees="360">
-    <shape android:shape="ring" android:innerRadiusRatio="3"
-        android:thicknessRatio="8" android:useLevel="false">
+    <shape
+        android:innerRadiusRatio="3"
+        android:shape="ring"
+        android:thicknessRatio="8"
+        android:useLevel="false">
 
-        <size android:width="76dip" android:height="76dip" />
-        <gradient android:type="sweep" android:useLevel="false"
-            android:startColor="#22445b"
-            android:endColor="#0d1a23"
+        <size
+            android:width="76dip"
+            android:height="76dip" />
+        <gradient
             android:angle="0"
-        />
+            android:endColor="#0d1a23"
+            android:startColor="#22445b"
+            android:type="sweep"
+            android:useLevel="false" />
     </shape>
 </rotate>
