--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
 
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:fillViewport="true"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:fillViewport="true"
         android:isScrollContainer="false">
 
         <RelativeLayout
@@ -32,97 +32,97 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
-                android:hint="Recipe Name..."
-                android:ems="10"
                 android:backgroundTint="@color/colorPrimary"
-                android:maxLines="1"
-                android:maxLength="40"/>
+                android:ems="10"
+                android:hint="Recipe Name..."
+                android:maxLength="40"
+                android:maxLines="1" />
 
             <EditText
                 android:id="@+id/instr_field"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Instructions..."
-                android:ems="10"
-                android:backgroundTint="@color/colorPrimary"
-                android:maxLines="1"
                 android:layout_below="@+id/name_field"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:backgroundTint="@color/colorPrimary"
+                android:ems="10"
+                android:hint="Instructions..."
+                android:maxLines="1" />
 
             <AutoCompleteTextView
                 android:id="@+id/actv_ingredients"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/instr_field"
-                android:layout_weight="1"
-                android:hint="Search Ingredients ..."
-                android:backgroundTint="@color/colorPrimary"
                 android:layout_centerHorizontal="true"
-                android:ems="10"/>
+                android:layout_weight="1"
+                android:backgroundTint="@color/colorPrimary"
+                android:ems="10"
+                android:hint="Search Ingredients ..." />
 
             <ListView
                 android:id="@+id/lv_favorite_recipes"
                 android:layout_width="220dp"
                 android:layout_height="150dp"
+                android:layout_below="@+id/actv_ingredients"
+                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:divider="@color/colorPrimary"
-                android:dividerHeight="1dp"
-                android:layout_below="@+id/actv_ingredients"
-                android:layout_centerHorizontal="true" />
+                android:dividerHeight="1dp" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:text=" Type :"
-                android:layout_marginLeft="20dp"
-                android:layout_alignTop="@+id/spinner_type"
                 android:layout_alignEnd="@+id/textView19"
-                android:layout_marginTop="12dp" />
+                android:layout_alignTop="@+id/spinner_type"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="12dp"
+                android:text=" Type :" />
 
             <Spinner
                 android:id="@+id/spinner_type"
+                style="@style/spinner_style"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                style="@style/spinner_style"
-                android:layout_marginTop="12dp"
                 android:layout_below="@+id/lv_favorite_recipes"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="12dp" />
 
             <Spinner
                 android:id="@+id/spinner_cuisine"
+                style="@style/spinner_style"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                style="@style/spinner_style"
-                android:layout_below="@+id/textView3"
-                android:layout_alignStart="@+id/spinner_type" />
+                android:layout_alignStart="@+id/spinner_type"
+                android:layout_below="@+id/textView3" />
 
             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:text=" Cuisine :"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/textView3"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="15dp" />
+                android:layout_below="@+id/textView3"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:text=" Cuisine :" />
 
             <ImageView
+                android:id="@+id/imageDisplay"
                 android:layout_width="100dp"
                 android:layout_height="70dp"
-                android:layout_centerHorizontal="true"
                 android:layout_below="@+id/spinner_cuisine"
-                android:id="@+id/imageDisplay"
-                android:layout_marginTop="6dp"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="6dp" />
 
             <android.support.design.widget.BottomNavigationView
-                android:theme="@style/NavigationTheme"
                 android:id="@+id/ing_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:theme="@style/NavigationTheme"
                 app:itemBackground="@color/colorPrimary"
                 app:itemIconTint="@drawable/nav_item_color"
                 app:itemTextColor="@drawable/nav_item_color"
