--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:fillViewport="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:fillViewport="true">
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -32,59 +30,59 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Welcome Admin"
-                android:textAlignment="center"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="60dp"/>
+                android:layout_margin="60dp"
+                android:text="Welcome Admin"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recipe Name"
+                android:layout_alignParentStart="true"
+                android:layout_alignTop="@+id/textView2"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="16dp"
-                android:layout_alignTop="@+id/textView2"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="26dp" />
+                android:layout_marginTop="26dp"
+                android:text="Recipe Name" />
 
             <EditText
                 android:id="@+id/recipeName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter name..."
-                android:inputType="textPersonName"
                 android:layout_alignTop="@+id/textView9"
                 android:layout_toEndOf="@+id/textView18"
                 android:backgroundTint="@color/colorPrimary"
-                android:maxLines="2"
-                android:maxLength="40"/>
+                android:ems="10"
+                android:hint="Enter name..."
+                android:inputType="textPersonName"
+                android:maxLength="40"
+                android:maxLines="2" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recipe Type"
+                android:layout_alignStart="@+id/textView11"
                 android:layout_below="@+id/textView2"
-                android:layout_alignStart="@+id/textView11" />
+                android:text="Recipe Type" />
 
             <Spinner
                 android:id="@+id/spinner_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView2"
                 android:layout_alignParentEnd="true"
-                android:layout_alignStart="@+id/textView2" />
+                android:layout_alignStart="@+id/textView2"
+                android:layout_below="@+id/textView2" />
 
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recipe Cuisine"
+                android:layout_alignStart="@+id/textView9"
                 android:layout_alignTop="@+id/spinner_cuisine"
-                android:layout_alignStart="@+id/textView9" />
+                android:text="Recipe Cuisine" />
 
             <Spinner
                 android:id="@+id/spinner_cuisine"
@@ -97,112 +95,112 @@
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="     Recipe Instructions"
                 android:layout_alignBaseline="@+id/recipeInstructions"
                 android:layout_alignBottom="@+id/recipeInstructions"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:text="     Recipe Instructions" />
 
             <EditText
                 android:id="@+id/recipeInstructions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/ingredientDescription"
+                android:layout_below="@+id/spinner_cuisine"
+                android:backgroundTint="@color/colorPrimary"
                 android:ems="10"
                 android:hint="Multi-line Input..."
                 android:inputType="textMultiLine"
-                android:layout_below="@+id/spinner_cuisine"
-                android:layout_alignStart="@+id/ingredientDescription"
-                android:backgroundTint="@color/colorPrimary"
-                android:maxLines="2"/>
+                android:maxLines="2" />
 
             <TextView
                 android:id="@+id/textView18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="     Recipe Ingredients"
+                android:layout_alignParentStart="true"
                 android:layout_below="@+id/recipeInstructions"
-                android:layout_alignParentStart="true" />
+                android:text="     Recipe Ingredients" />
 
             <EditText
                 android:id="@+id/recipeIngredients"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/recipeInstructions"
+                android:layout_below="@+id/textView18"
+                android:backgroundTint="@color/colorPrimary"
                 android:ems="10"
                 android:hint="separate by space"
                 android:inputType="textMultiLine"
-                android:layout_below="@+id/textView18"
-                android:layout_alignStart="@+id/recipeInstructions"
-                android:backgroundTint="@color/colorPrimary"
-                android:maxLines="2"/>
+                android:maxLines="2" />
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ingredient Name"
                 android:layout_alignBaseline="@+id/ingredientName"
                 android:layout_alignBottom="@+id/ingredientName"
-                android:layout_alignStart="@+id/textView11" />
+                android:layout_alignStart="@+id/textView11"
+                android:text="Ingredient Name" />
 
             <EditText
                 android:id="@+id/ingredientName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/recipeIngredients"
+                android:layout_below="@+id/recipeIngredients"
+                android:backgroundTint="@color/colorPrimary"
                 android:ems="10"
                 android:hint="Enter name..."
                 android:inputType="textPersonName"
-                android:layout_below="@+id/recipeIngredients"
-                android:layout_alignStart="@+id/recipeIngredients"
-                android:backgroundTint="@color/colorPrimary"
-                android:maxLines="2"
-                android:maxLength="40"/>
+                android:maxLength="40"
+                android:maxLines="2" />
 
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="Ingredient Description"
+                android:layout_alignStart="@+id/textView13"
                 android:layout_below="@+id/ingredientName"
-                android:layout_alignStart="@+id/textView13" />
+                android:layout_marginTop="15dp"
+                android:text="Ingredient Description" />
 
             <EditText
                 android:id="@+id/ingredientDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView14"
+                android:layout_alignBottom="@+id/textView14"
+                android:layout_alignParentEnd="true"
+                android:backgroundTint="@color/colorPrimary"
                 android:ems="10"
                 android:hint="Multi-line input..."
                 android:inputType="textMultiLine"
-                android:backgroundTint="@color/colorPrimary"
-                android:maxLines="2"
-                android:layout_alignBaseline="@+id/textView14"
-                android:layout_alignBottom="@+id/textView14"
-                android:layout_alignParentEnd="true" />
+                android:maxLines="2" />
 
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
-                android:text="Ingredient Type"
+                android:layout_alignStart="@+id/textView14"
                 android:layout_below="@+id/ingredientDescription"
-                android:layout_alignStart="@+id/textView14" />
+                android:layout_marginTop="14dp"
+                android:text="Ingredient Type" />
 
             <Spinner
                 android:id="@+id/spinner_ing_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/textView15"
                 android:layout_alignParentEnd="true"
-                android:layout_alignStart="@+id/spinner_type" />
+                android:layout_alignStart="@+id/spinner_type"
+                android:layout_alignTop="@+id/textView15" />
 
             <TextView
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="11dp"
-                android:text="Ingredient History"
+                android:layout_alignStart="@+id/textView15"
                 android:layout_below="@+id/spinner_ing_type"
-                android:layout_alignStart="@+id/textView15" />
+                android:layout_marginTop="11dp"
+                android:text="Ingredient History" />
 
             <EditText
                 android:id="@+id/ingredientHistory"
@@ -210,20 +208,20 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/textView15"
+                android:backgroundTint="@color/colorPrimary"
                 android:ems="10"
                 android:hint="Multi-line input..."
                 android:inputType="textPersonName"
-                android:backgroundTint="@color/colorPrimary"
-                android:maxLines="2"/>
+                android:maxLines="2" />
 
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="13dp"
-                android:text="Ingredient Season"
+                android:layout_alignStart="@+id/textView16"
                 android:layout_below="@+id/ingredientHistory"
-                android:layout_alignStart="@+id/textView16" />
+                android:layout_marginTop="13dp"
+                android:text="Ingredient Season" />
 
             <Spinner
                 android:id="@+id/spinner_ing_season"
@@ -236,34 +234,34 @@
                 android:id="@+id/recipe_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recipe Image"
-                android:layout_below="@+id/spinner_ing_season"
                 android:layout_alignEnd="@+id/save_ingredient"
-                android:layout_alignStart="@+id/save_ingredient" />
+                android:layout_alignStart="@+id/save_ingredient"
+                android:layout_below="@+id/spinner_ing_season"
+                android:text="Recipe Image" />
 
             <Button
                 android:id="@+id/ingredient_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ingredient Image"
                 android:layout_below="@+id/recipe_img"
-                android:layout_toEndOf="@+id/recipe_img" />
+                android:layout_toEndOf="@+id/recipe_img"
+                android:text="Ingredient Image" />
 
             <Button
                 android:id="@+id/save_recipe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Save as Recipe"
                 android:layout_below="@+id/spinner_ing_season"
-                android:layout_toEndOf="@+id/recipe_img"/>
+                android:layout_toEndOf="@+id/recipe_img"
+                android:text="Save as Recipe" />
 
             <Button
                 android:id="@+id/save_ingredient"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Save as Ingredient"
+                android:layout_alignStart="@+id/textView17"
                 android:layout_below="@+id/recipe_img"
-                android:layout_alignStart="@+id/textView17" />
+                android:text="Save as Ingredient" />
 
         </RelativeLayout>
 
