--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -13,9 +13,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
         android:layout_below="@+id/toolbar"
-        android:layout_alignParentBottom="true">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_fav_recipes"
@@ -41,13 +41,13 @@
             android:id="@+id/tv_fav_ingredients"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@string/favorite_ingredients"
-            android:textAlignment="center"
-            android:textSize="18sp"
             android:layout_weight="1"
             android:background="@color/colorAccent"
+            android:gravity="center"
+            android:text="@string/favorite_ingredients"
+            android:textAlignment="center"
             android:textColor="@drawable/nav_item_color"
-            android:gravity="center" />
+            android:textSize="18sp" />
 
         <ListView
             android:id="@+id/lv_fav_ingredients"
