--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
 
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,42 +16,42 @@
         android:id="@+id/imageView"
         android:layout_width="111dp"
         android:layout_height="90dp"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:src="@drawable/chef_cook"
         android:layout_margin="60dp"
-        android:layout_centerHorizontal="true"/>
+        android:src="@drawable/chef_cook" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="200dp"
         android:layout_height="40dp"
+        android:layout_above="@+id/spinner"
+        android:layout_alignEnd="@+id/spinner"
+        android:layout_alignStart="@+id/spinner"
         android:gravity="center"
         android:text="Search for Recipes and Ingredients :"
-        android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:layout_above="@+id/spinner"
-        android:layout_alignStart="@+id/spinner"
-        android:layout_alignEnd="@+id/spinner" />
+        android:textStyle="bold" />
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/spinner"
+        style="@style/spinner_style"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        style="@style/spinner_style"
-        android:layout_marginLeft="250dp"
-        android:layout_marginRight="250dp"
         android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="250dp"
+        android:layout_marginRight="250dp" />
 
     <TextView
         android:id="@+id/tv_recipe_of_the_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold|italic"
+        android:layout_alignEnd="@+id/imageView"
+        android:layout_centerVertical="true"
         android:text="Recipe of the Day:"
         android:textColor="@color/colorPrimary"
-        android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/imageView" />
+        android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/tv_daily_recipe_name"
@@ -68,15 +68,15 @@
         android:id="@+id/imageDisplay"
         android:layout_width="250dp"
         android:layout_height="180dp"
-        android:layout_below="@+id/tv_daily_recipe_name"
-        android:layout_alignStart="@+id/spinner" />
+        android:layout_alignStart="@+id/spinner"
+        android:layout_below="@+id/tv_daily_recipe_name" />
 
     <android.support.design.widget.BottomNavigationView
-        android:theme="@style/NavigationTheme"
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:theme="@style/NavigationTheme"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@drawable/nav_item_color"
         app:itemTextColor="@drawable/nav_item_color"
