--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -10,11 +11,11 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView"
@@ -22,8 +23,8 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:layout_margin="15dp"
-            android:src="@drawable/chef_cook"
-            android:layout_weight="0.09" />
+            android:layout_weight="0.09"
+            android:src="@drawable/chef_cook" />
 
         <TextView
             android:id="@+id/textView"
@@ -38,56 +39,54 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
-            android:layout_margin="15dp"
-            android:inputType="textEmailAddress"
-            android:hint=" Email"
             android:id="@+id/editTextEmail"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/email"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
             android:backgroundTint="@color/colorPrimary"
-            android:layout_gravity="center" />
+            android:drawableLeft="@drawable/email"
+            android:hint=" Email"
+            android:inputType="textEmailAddress" />
 
         <EditText
-            android:layout_margin="15dp"
-            android:inputType="textPassword"
-            android:hint=" Password"
             android:id="@+id/editTextPassword"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/password"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
             android:backgroundTint="@color/colorPrimary"
-            android:layout_gravity="center" />
+            android:drawableLeft="@drawable/password"
+            android:hint=" Password"
+            android:inputType="textPassword" />
 
         <ImageButton
             android:id="@+id/buttonRegister"
-            android:text="Register User"
-            android:src="@drawable/register"
-            android:layout_gravity="center"
             android:layout_width="255dp"
             android:layout_height="53dp"
-            android:layout_margin="20dp"/>
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:src="@drawable/register"
+            android:text="Register User" />
 
         <TextView
-            android:textAlignment="center"
-            android:text="Already Registered ? Sign in here"
             android:id="@+id/textViewSignin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:text="Already Registered ? Sign in here"
+            android:textAlignment="center" />
 
         <ProgressBar
             android:id="@+id/progressReg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
+            android:layout_gravity="center"
             android:background="@drawable/progress"
-            android:layout_gravity="center"/>
+            android:indeterminate="true" />
 
 
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
