--- a/app/src/main/res/layout/activity_search_by_name.xml
+++ b/app/src/main/res/layout/activity_search_by_name.xml
@@ -22,22 +22,22 @@
         android:id="@+id/autoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_marginBottom="448dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:backgroundTint="@color/colorPrimary"
+        android:ellipsize="end"
         android:gravity="center_horizontal"
         android:hint="Search"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="448dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:backgroundTint="@color/colorPrimary"
-        android:maxLines="1"
         android:imeOptions="actionSearch"
-        android:ellipsize="end"/>
+        android:maxLines="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </android.support.constraint.ConstraintLayout>
