--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -10,12 +11,12 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout"
         android:weightSum="1">
 
         <ImageView
@@ -24,8 +25,8 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:layout_margin="15dp"
-            android:src="@drawable/chef_cook"
-            android:layout_weight="0.09" />
+            android:layout_weight="0.09"
+            android:src="@drawable/chef_cook" />
 
         <TextView
             android:id="@+id/textView"
@@ -54,20 +55,19 @@
             android:id="@+id/buttonResetPass"
             android:layout_width="255dp"
             android:layout_height="53dp"
+            android:layout_gravity="center"
             android:layout_margin="20dp"
-            android:src="@drawable/reset_password"
-            android:layout_gravity="center" />
+            android:src="@drawable/reset_password" />
 
         <TextView
-            android:textAlignment="center"
-            android:text="Already Registered ? Sign in here"
             android:id="@+id/textViewReset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:text="Already Registered ? Sign in here"
+            android:textAlignment="center" />
 
     </LinearLayout>
-
 
 
 </RelativeLayout>
